--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,14 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+
+  <!-- custom stylesheet -->
+  <!--link href="/node_modules/leaflet/dist/leaflet.css"  type="text/css" rel="stylesheet"-->
+  <!--link href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" rel="stylesheet"-->
+  <link rel="stylesheet" href="build/leaflet.css">
+
+  
+
 </head>
 <body>
 
