--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,23 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div padding>
+    
+  </div>
+  <p>Current Latitude: {{locationTracker.lat}}</p>
+  <p>Current Longitude: {{locationTracker.lng}}</p>
+  <div padding id="map" style="width:100%; height:100%;"></div>
+  <ion-fab bottom right>
+    <button ion-fab mini (click)="start()">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
+  <ion-fab bottom left>
+      <button ion-fab mini (click)="stop()">
+        <ion-icon name="exit"></ion-icon>
+      </button>
+    </ion-fab>
+
+
+
 </ion-content>
