establish ngx-leaflet

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   <!-- custom stylesheet -->
   <!--link href="/node_modules/leaflet/dist/leaflet.css"  type="text/css" rel="stylesheet"-->
   <!--link href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" rel="stylesheet"-->
-  <link rel="stylesheet" href="build/leaflet.css">
+  <link rel="stylesheet" href="build/leaflet/leaflet.css">
 
   
 
